# aws-audit-skills

./: .gitignore  README.md  pyproject.toml
docs/: iam-policy-audit.md  s3-public-bucket-scan.md  vpc-flow-anomaly.md
skills/cloudtrail-mass-delete/: SKILL.md  detect.py  test_detect.py
skills/cloudtrail-mass-delete/fixtures/: events.json
skills/cloudtrail-novel-country-login/: SKILL.md  detect.py  test_detect.py
skills/cloudtrail-trail-tampering/: SKILL.md  detect.py  test_detect.py  test_integration_account_resolution_filtering.py  test_integration_merged_branches.py
skills/iam-policy-audit/: SKILL.md  audit.py  test_audit.py
skills/iam-policy-audit/fixtures/: inline_policies.json  managed_policies.json  policy_documents.json  roles.json
skills/s3-public-bucket-scan/: SKILL.md  scan.py  test_scan.py
skills/vpc-flow-anomaly/: SKILL.md  flow_check.py  test_flow_check.py
